manifests/base/resources/collections/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: collections
    chart: collections-2.8.42
    heritage: Helm
    release: collections
  name: collections
spec:
  ports:
  - name: collections
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: collections
    release: collections
  type: ClusterIP
---
