manifests/base/resources/collections/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://collections-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: collections
    chart: collections-2.8.42
    heritage: Helm
    release: collections
  name: collections
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: collections
          servicePort: 8080
        path: /api/v1/collections
      - backend:
          serviceName: collections
          servicePort: 8080
        path: /api/v1/items
---
